// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CustomerAddressForm stories snapshot > Default story renders and matches snapshot 1`] = `
<div>
  <div
    class="w-full relative"
  >
    <form
      data-testid="customer-address-form"
    >
      <div
        class="space-y-4"
      >
        <div
          class="grid gap-2"
          data-slot="form-item"
        >
          <label
            class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive text-sm font-medium text-foreground"
            data-error="false"
            data-slot="form-label"
            for="_r_0_-form-item"
          >
            Address Title
          </label>
          <input
            aria-describedby="_r_0_-form-item-description"
            aria-invalid="false"
            class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 w-full min-w-0 border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive rounded-md"
            data-slot="form-control"
            id="_r_0_-form-item"
            maxlength="256"
            name="addressId"
            placeholder="e.g., Home, Work, Mom's House"
            type="text"
            value=""
          />
        </div>
        <div
          class="grid grid-cols-1 md:grid-cols-2 gap-4"
        >
          <div
            class="grid gap-2"
            data-slot="form-item"
          >
            <label
              class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive text-sm font-medium text-foreground"
              data-error="false"
              data-slot="form-label"
              for="_r_1_-form-item"
            >
              First Name
            </label>
            <input
              aria-describedby="_r_1_-form-item-description"
              aria-invalid="false"
              autocomplete="given-name"
              class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 w-full min-w-0 border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive rounded-md"
              data-slot="form-control"
              id="_r_1_-form-item"
              name="firstName"
              type="text"
              value=""
            />
          </div>
          <div
            class="grid gap-2"
            data-slot="form-item"
          >
            <label
              class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive text-sm font-medium text-foreground"
              data-error="false"
              data-slot="form-label"
              for="_r_2_-form-item"
            >
              Last Name
            </label>
            <input
              aria-describedby="_r_2_-form-item-description"
              aria-invalid="false"
              autocomplete="family-name"
              class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 w-full min-w-0 border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive rounded-md"
              data-slot="form-control"
              id="_r_2_-form-item"
              name="lastName"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="grid gap-2"
          data-slot="form-item"
        >
          <label
            class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive text-sm font-medium text-foreground"
            data-error="false"
            data-slot="form-label"
            for="_r_3_-form-item"
          >
            Phone
          </label>
          <input
            aria-describedby="_r_3_-form-item-description"
            aria-invalid="false"
            autocomplete="tel"
            class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 w-full min-w-0 border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive rounded-md"
            data-slot="form-control"
            id="_r_3_-form-item"
            maxlength="32"
            name="phone"
            placeholder="(555) 123-4567"
            type="tel"
            value=""
          />
        </div>
        <div
          class="grid gap-2 [&_[data-slot=native-select-wrapper]]:w-full"
          data-slot="form-item"
        >
          <label
            class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive text-sm font-medium text-foreground"
            data-error="false"
            data-slot="form-label"
            for="_r_4_-form-item"
          >
            Country
          </label>
          <div
            class="group/native-select relative w-fit has-[select:disabled]:opacity-50"
            data-slot="native-select-wrapper"
          >
            <select
              aria-describedby="_r_4_-form-item-description"
              aria-invalid="false"
              class="border-input placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 dark:hover:bg-input/50 h-9 w-full min-w-0 appearance-none border bg-transparent px-3 py-2 pr-9 text-sm shadow-xs transition-[color,box-shadow] outline-none disabled:pointer-events-none disabled:cursor-not-allowed data-[size=sm]:h-8 data-[size=sm]:py-1 focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive rounded-md"
              data-size="default"
              data-slot="form-control"
              id="_r_4_-form-item"
              name="countryCode"
            >
              <option
                value="US"
              >
                United States
              </option>
              <option
                value="CA"
              >
                Canada
              </option>
            </select>
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-down text-muted-foreground pointer-events-none absolute top-1/2 right-3.5 size-4 -translate-y-1/2 opacity-50 select-none"
              data-slot="native-select-icon"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m6 9 6 6 6-6"
              />
            </svg>
          </div>
        </div>
        <div
          class="grid gap-2"
          data-slot="form-item"
        >
          <label
            class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive text-sm font-medium text-foreground"
            data-error="false"
            data-slot="form-label"
            for="_r_5_-form-item"
          >
            Address
          </label>
          <input
            aria-describedby="_r_5_-form-item-description"
            aria-invalid="false"
            autocomplete="address-line1"
            class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 w-full min-w-0 border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive rounded-md"
            data-slot="form-control"
            id="_r_5_-form-item"
            name="address1"
            type="text"
            value=""
          />
        </div>
        <div
          class="grid gap-2"
          data-slot="form-item"
        >
          <label
            class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive text-sm font-medium text-foreground"
            data-error="false"
            data-slot="form-label"
            for="_r_6_-form-item"
          >
            Address Line 2
          </label>
          <input
            aria-describedby="_r_6_-form-item-description"
            aria-invalid="false"
            autocomplete="address-line2"
            class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 w-full min-w-0 border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive rounded-md"
            data-slot="form-control"
            id="_r_6_-form-item"
            name="address2"
            placeholder="Apartment, suite, etc. (optional)"
            type="text"
            value=""
          />
        </div>
        <div
          class="grid grid-cols-1 md:grid-cols-3 gap-4"
        >
          <div
            class="grid gap-2"
            data-slot="form-item"
          >
            <label
              class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive text-sm font-medium text-foreground"
              data-error="false"
              data-slot="form-label"
              for="_r_7_-form-item"
            >
              Zip Code
            </label>
            <input
              aria-describedby="_r_7_-form-item-description"
              aria-invalid="false"
              autocomplete="postal-code"
              class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 w-full min-w-0 border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive rounded-md"
              data-slot="form-control"
              id="_r_7_-form-item"
              name="postalCode"
              type="text"
              value=""
            />
          </div>
          <div
            class="grid gap-2"
            data-slot="form-item"
          >
            <label
              class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive text-sm font-medium text-foreground"
              data-error="false"
              data-slot="form-label"
              for="_r_8_-form-item"
            >
              City
            </label>
            <input
              aria-describedby="_r_8_-form-item-description"
              aria-invalid="false"
              autocomplete="address-level2"
              class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 w-full min-w-0 border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive rounded-md"
              data-slot="form-control"
              id="_r_8_-form-item"
              name="city"
              type="text"
              value=""
            />
          </div>
          <div
            class="grid gap-2 [&_[data-slot=native-select-wrapper]]:w-full"
            data-slot="form-item"
          >
            <label
              class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive text-sm font-medium text-foreground"
              data-error="false"
              data-slot="form-label"
              for="_r_9_-form-item"
            >
              State
            </label>
            <div
              class="group/native-select relative w-fit has-[select:disabled]:opacity-50"
              data-slot="native-select-wrapper"
            >
              <select
                aria-describedby="_r_9_-form-item-description"
                aria-invalid="false"
                class="border-input placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 dark:hover:bg-input/50 h-9 w-full min-w-0 appearance-none border bg-transparent px-3 py-2 pr-9 text-sm shadow-xs transition-[color,box-shadow] outline-none disabled:pointer-events-none disabled:cursor-not-allowed data-[size=sm]:h-8 data-[size=sm]:py-1 focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive rounded-md"
                data-size="default"
                data-slot="form-control"
                id="_r_9_-form-item"
                name="stateCode"
              >
                <option
                  value=""
                >
                  Select State
                </option>
                <option
                  value="AL"
                >
                  Alabama
                </option>
                <option
                  value="AK"
                >
                  Alaska
                </option>
                <option
                  value="AZ"
                >
                  Arizona
                </option>
                <option
                  value="AR"
                >
                  Arkansas
                </option>
                <option
                  value="CA"
                >
                  California
                </option>
                <option
                  value="CO"
                >
                  Colorado
                </option>
                <option
                  value="CT"
                >
                  Connecticut
                </option>
                <option
                  value="DE"
                >
                  Delaware
                </option>
                <option
                  value="DC"
                >
                  District Of Columbia
                </option>
                <option
                  value="FL"
                >
                  Florida
                </option>
                <option
                  value="GA"
                >
                  Georgia
                </option>
                <option
                  value="HI"
                >
                  Hawaii
                </option>
                <option
                  value="ID"
                >
                  Idaho
                </option>
                <option
                  value="IL"
                >
                  Illinois
                </option>
                <option
                  value="IN"
                >
                  Indiana
                </option>
                <option
                  value="IA"
                >
                  Iowa
                </option>
                <option
                  value="KS"
                >
                  Kansas
                </option>
                <option
                  value="KY"
                >
                  Kentucky
                </option>
                <option
                  value="LA"
                >
                  Louisiana
                </option>
                <option
                  value="ME"
                >
                  Maine
                </option>
                <option
                  value="MD"
                >
                  Maryland
                </option>
                <option
                  value="MA"
                >
                  Massachusetts
                </option>
                <option
                  value="MI"
                >
                  Michigan
                </option>
                <option
                  value="MN"
                >
                  Minnesota
                </option>
                <option
                  value="MS"
                >
                  Mississippi
                </option>
                <option
                  value="MO"
                >
                  Missouri
                </option>
                <option
                  value="MT"
                >
                  Montana
                </option>
                <option
                  value="NE"
                >
                  Nebraska
                </option>
                <option
                  value="NV"
                >
                  Nevada
                </option>
                <option
                  value="NH"
                >
                  New Hampshire
                </option>
                <option
                  value="NJ"
                >
                  New Jersey
                </option>
                <option
                  value="NM"
                >
                  New Mexico
                </option>
                <option
                  value="NY"
                >
                  New York
                </option>
                <option
                  value="NC"
                >
                  North Carolina
                </option>
                <option
                  value="ND"
                >
                  North Dakota
                </option>
                <option
                  value="OH"
                >
                  Ohio
                </option>
                <option
                  value="OK"
                >
                  Oklahoma
                </option>
                <option
                  value="OR"
                >
                  Oregon
                </option>
                <option
                  value="PA"
                >
                  Pennsylvania
                </option>
                <option
                  value="RI"
                >
                  Rhode Island
                </option>
                <option
                  value="SC"
                >
                  South Carolina
                </option>
                <option
                  value="SD"
                >
                  South Dakota
                </option>
                <option
                  value="TN"
                >
                  Tennessee
                </option>
                <option
                  value="TX"
                >
                  Texas
                </option>
                <option
                  value="UT"
                >
                  Utah
                </option>
                <option
                  value="VT"
                >
                  Vermont
                </option>
                <option
                  value="VA"
                >
                  Virginia
                </option>
                <option
                  value="WA"
                >
                  Washington
                </option>
                <option
                  value="WV"
                >
                  West Virginia
                </option>
                <option
                  value="WI"
                >
                  Wisconsin
                </option>
                <option
                  value="WY"
                >
                  Wyoming
                </option>
              </select>
              <svg
                aria-hidden="true"
                class="lucide lucide-chevron-down text-muted-foreground pointer-events-none absolute top-1/2 right-3.5 size-4 -translate-y-1/2 opacity-50 select-none"
                data-slot="native-select-icon"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m6 9 6 6 6-6"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <hr
        class="border-border mt-4"
      />
      <div
        class="flex gap-3 pt-4 justify-end"
      >
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 py-2 has-[>svg]:px-3 rounded-md px-6"
          data-size="default"
          data-slot="button"
          data-variant="outline"
          type="button"
        >
          Cancel
        </button>
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive h-9 py-2 has-[>svg]:px-3 rounded-md bg-primary hover:bg-primary/90 text-primary-foreground px-6"
          data-size="default"
          data-slot="button"
          data-variant="default"
          type="submit"
        >
          Save
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`CustomerAddressForm stories snapshot > Loading story renders and matches snapshot 1`] = `
<div>
  <div
    class="w-full relative"
  >
    <form
      data-testid="customer-address-form"
    >
      <div
        class="space-y-4"
      >
        <div
          class="grid gap-2"
          data-slot="form-item"
        >
          <label
            class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive text-sm font-medium text-foreground"
            data-error="false"
            data-slot="form-label"
            for="_r_k_-form-item"
          >
            Address Title
          </label>
          <input
            aria-describedby="_r_k_-form-item-description"
            aria-invalid="false"
            class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 w-full min-w-0 border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive rounded-md"
            data-slot="form-control"
            id="_r_k_-form-item"
            maxlength="256"
            name="addressId"
            placeholder="e.g., Home, Work, Mom's House"
            type="text"
            value=""
          />
        </div>
        <div
          class="grid grid-cols-1 md:grid-cols-2 gap-4"
        >
          <div
            class="grid gap-2"
            data-slot="form-item"
          >
            <label
              class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive text-sm font-medium text-foreground"
              data-error="false"
              data-slot="form-label"
              for="_r_l_-form-item"
            >
              First Name
            </label>
            <input
              aria-describedby="_r_l_-form-item-description"
              aria-invalid="false"
              autocomplete="given-name"
              class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 w-full min-w-0 border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive rounded-md"
              data-slot="form-control"
              id="_r_l_-form-item"
              name="firstName"
              type="text"
              value=""
            />
          </div>
          <div
            class="grid gap-2"
            data-slot="form-item"
          >
            <label
              class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive text-sm font-medium text-foreground"
              data-error="false"
              data-slot="form-label"
              for="_r_m_-form-item"
            >
              Last Name
            </label>
            <input
              aria-describedby="_r_m_-form-item-description"
              aria-invalid="false"
              autocomplete="family-name"
              class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 w-full min-w-0 border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive rounded-md"
              data-slot="form-control"
              id="_r_m_-form-item"
              name="lastName"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="grid gap-2"
          data-slot="form-item"
        >
          <label
            class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive text-sm font-medium text-foreground"
            data-error="false"
            data-slot="form-label"
            for="_r_n_-form-item"
          >
            Phone
          </label>
          <input
            aria-describedby="_r_n_-form-item-description"
            aria-invalid="false"
            autocomplete="tel"
            class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 w-full min-w-0 border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive rounded-md"
            data-slot="form-control"
            id="_r_n_-form-item"
            maxlength="32"
            name="phone"
            placeholder="(555) 123-4567"
            type="tel"
            value=""
          />
        </div>
        <div
          class="grid gap-2 [&_[data-slot=native-select-wrapper]]:w-full"
          data-slot="form-item"
        >
          <label
            class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive text-sm font-medium text-foreground"
            data-error="false"
            data-slot="form-label"
            for="_r_o_-form-item"
          >
            Country
          </label>
          <div
            class="group/native-select relative w-fit has-[select:disabled]:opacity-50"
            data-slot="native-select-wrapper"
          >
            <select
              aria-describedby="_r_o_-form-item-description"
              aria-invalid="false"
              class="border-input placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 dark:hover:bg-input/50 h-9 w-full min-w-0 appearance-none border bg-transparent px-3 py-2 pr-9 text-sm shadow-xs transition-[color,box-shadow] outline-none disabled:pointer-events-none disabled:cursor-not-allowed data-[size=sm]:h-8 data-[size=sm]:py-1 focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive rounded-md"
              data-size="default"
              data-slot="form-control"
              id="_r_o_-form-item"
              name="countryCode"
            >
              <option
                value="US"
              >
                United States
              </option>
              <option
                value="CA"
              >
                Canada
              </option>
            </select>
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-down text-muted-foreground pointer-events-none absolute top-1/2 right-3.5 size-4 -translate-y-1/2 opacity-50 select-none"
              data-slot="native-select-icon"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m6 9 6 6 6-6"
              />
            </svg>
          </div>
        </div>
        <div
          class="grid gap-2"
          data-slot="form-item"
        >
          <label
            class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive text-sm font-medium text-foreground"
            data-error="false"
            data-slot="form-label"
            for="_r_p_-form-item"
          >
            Address
          </label>
          <input
            aria-describedby="_r_p_-form-item-description"
            aria-invalid="false"
            autocomplete="address-line1"
            class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 w-full min-w-0 border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive rounded-md"
            data-slot="form-control"
            id="_r_p_-form-item"
            name="address1"
            type="text"
            value=""
          />
        </div>
        <div
          class="grid gap-2"
          data-slot="form-item"
        >
          <label
            class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive text-sm font-medium text-foreground"
            data-error="false"
            data-slot="form-label"
            for="_r_q_-form-item"
          >
            Address Line 2
          </label>
          <input
            aria-describedby="_r_q_-form-item-description"
            aria-invalid="false"
            autocomplete="address-line2"
            class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 w-full min-w-0 border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive rounded-md"
            data-slot="form-control"
            id="_r_q_-form-item"
            name="address2"
            placeholder="Apartment, suite, etc. (optional)"
            type="text"
            value=""
          />
        </div>
        <div
          class="grid grid-cols-1 md:grid-cols-3 gap-4"
        >
          <div
            class="grid gap-2"
            data-slot="form-item"
          >
            <label
              class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive text-sm font-medium text-foreground"
              data-error="false"
              data-slot="form-label"
              for="_r_r_-form-item"
            >
              Zip Code
            </label>
            <input
              aria-describedby="_r_r_-form-item-description"
              aria-invalid="false"
              autocomplete="postal-code"
              class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 w-full min-w-0 border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive rounded-md"
              data-slot="form-control"
              id="_r_r_-form-item"
              name="postalCode"
              type="text"
              value=""
            />
          </div>
          <div
            class="grid gap-2"
            data-slot="form-item"
          >
            <label
              class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive text-sm font-medium text-foreground"
              data-error="false"
              data-slot="form-label"
              for="_r_s_-form-item"
            >
              City
            </label>
            <input
              aria-describedby="_r_s_-form-item-description"
              aria-invalid="false"
              autocomplete="address-level2"
              class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 w-full min-w-0 border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive rounded-md"
              data-slot="form-control"
              id="_r_s_-form-item"
              name="city"
              type="text"
              value=""
            />
          </div>
          <div
            class="grid gap-2 [&_[data-slot=native-select-wrapper]]:w-full"
            data-slot="form-item"
          >
            <label
              class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive text-sm font-medium text-foreground"
              data-error="false"
              data-slot="form-label"
              for="_r_t_-form-item"
            >
              State
            </label>
            <div
              class="group/native-select relative w-fit has-[select:disabled]:opacity-50"
              data-slot="native-select-wrapper"
            >
              <select
                aria-describedby="_r_t_-form-item-description"
                aria-invalid="false"
                class="border-input placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 dark:hover:bg-input/50 h-9 w-full min-w-0 appearance-none border bg-transparent px-3 py-2 pr-9 text-sm shadow-xs transition-[color,box-shadow] outline-none disabled:pointer-events-none disabled:cursor-not-allowed data-[size=sm]:h-8 data-[size=sm]:py-1 focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive rounded-md"
                data-size="default"
                data-slot="form-control"
                id="_r_t_-form-item"
                name="stateCode"
              >
                <option
                  value=""
                >
                  Select State
                </option>
                <option
                  value="AL"
                >
                  Alabama
                </option>
                <option
                  value="AK"
                >
                  Alaska
                </option>
                <option
                  value="AZ"
                >
                  Arizona
                </option>
                <option
                  value="AR"
                >
                  Arkansas
                </option>
                <option
                  value="CA"
                >
                  California
                </option>
                <option
                  value="CO"
                >
                  Colorado
                </option>
                <option
                  value="CT"
                >
                  Connecticut
                </option>
                <option
                  value="DE"
                >
                  Delaware
                </option>
                <option
                  value="DC"
                >
                  District Of Columbia
                </option>
                <option
                  value="FL"
                >
                  Florida
                </option>
                <option
                  value="GA"
                >
                  Georgia
                </option>
                <option
                  value="HI"
                >
                  Hawaii
                </option>
                <option
                  value="ID"
                >
                  Idaho
                </option>
                <option
                  value="IL"
                >
                  Illinois
                </option>
                <option
                  value="IN"
                >
                  Indiana
                </option>
                <option
                  value="IA"
                >
                  Iowa
                </option>
                <option
                  value="KS"
                >
                  Kansas
                </option>
                <option
                  value="KY"
                >
                  Kentucky
                </option>
                <option
                  value="LA"
                >
                  Louisiana
                </option>
                <option
                  value="ME"
                >
                  Maine
                </option>
                <option
                  value="MD"
                >
                  Maryland
                </option>
                <option
                  value="MA"
                >
                  Massachusetts
                </option>
                <option
                  value="MI"
                >
                  Michigan
                </option>
                <option
                  value="MN"
                >
                  Minnesota
                </option>
                <option
                  value="MS"
                >
                  Mississippi
                </option>
                <option
                  value="MO"
                >
                  Missouri
                </option>
                <option
                  value="MT"
                >
                  Montana
                </option>
                <option
                  value="NE"
                >
                  Nebraska
                </option>
                <option
                  value="NV"
                >
                  Nevada
                </option>
                <option
                  value="NH"
                >
                  New Hampshire
                </option>
                <option
                  value="NJ"
                >
                  New Jersey
                </option>
                <option
                  value="NM"
                >
                  New Mexico
                </option>
                <option
                  value="NY"
                >
                  New York
                </option>
                <option
                  value="NC"
                >
                  North Carolina
                </option>
                <option
                  value="ND"
                >
                  North Dakota
                </option>
                <option
                  value="OH"
                >
                  Ohio
                </option>
                <option
                  value="OK"
                >
                  Oklahoma
                </option>
                <option
                  value="OR"
                >
                  Oregon
                </option>
                <option
                  value="PA"
                >
                  Pennsylvania
                </option>
                <option
                  value="RI"
                >
                  Rhode Island
                </option>
                <option
                  value="SC"
                >
                  South Carolina
                </option>
                <option
                  value="SD"
                >
                  South Dakota
                </option>
                <option
                  value="TN"
                >
                  Tennessee
                </option>
                <option
                  value="TX"
                >
                  Texas
                </option>
                <option
                  value="UT"
                >
                  Utah
                </option>
                <option
                  value="VT"
                >
                  Vermont
                </option>
                <option
                  value="VA"
                >
                  Virginia
                </option>
                <option
                  value="WA"
                >
                  Washington
                </option>
                <option
                  value="WV"
                >
                  West Virginia
                </option>
                <option
                  value="WI"
                >
                  Wisconsin
                </option>
                <option
                  value="WY"
                >
                  Wyoming
                </option>
              </select>
              <svg
                aria-hidden="true"
                class="lucide lucide-chevron-down text-muted-foreground pointer-events-none absolute top-1/2 right-3.5 size-4 -translate-y-1/2 opacity-50 select-none"
                data-slot="native-select-icon"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m6 9 6 6 6-6"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <hr
        class="border-border mt-4"
      />
      <div
        class="flex gap-3 pt-4 justify-end"
      >
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 py-2 has-[>svg]:px-3 rounded-md px-6"
          data-size="default"
          data-slot="button"
          data-variant="outline"
          disabled=""
          type="button"
        >
          Cancel
        </button>
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive h-9 py-2 has-[>svg]:px-3 rounded-md bg-primary hover:bg-primary/90 text-primary-foreground px-6"
          data-size="default"
          data-slot="button"
          data-variant="default"
          disabled=""
          type="submit"
        >
          Saving...
        </button>
      </div>
    </form>
    <div
      class="absolute inset-0 bg-background/80 backdrop-blur-sm z-10 pointer-events-none flex items-center justify-center rounded-md"
      data-testid="customer-address-form-loading"
    >
      <div
        class="animate-spin rounded-full border-2 border-border border-t-primary size-8"
      />
    </div>
  </div>
</div>
`;

exports[`CustomerAddressForm stories snapshot > WithInitialData story renders and matches snapshot 1`] = `
<div>
  <div
    class="w-full relative"
  >
    <form
      data-testid="customer-address-form"
    >
      <div
        class="space-y-4"
      >
        <div
          class="grid gap-2"
          data-slot="form-item"
        >
          <label
            class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive text-sm font-medium text-foreground"
            data-error="false"
            data-slot="form-label"
            for="_r_a_-form-item"
          >
            Address Title
          </label>
          <input
            aria-describedby="_r_a_-form-item-description"
            aria-invalid="false"
            class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 w-full min-w-0 border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive rounded-md"
            data-slot="form-control"
            id="_r_a_-form-item"
            maxlength="256"
            name="addressId"
            placeholder="e.g., Home, Work, Mom's House"
            type="text"
            value="Home"
          />
        </div>
        <div
          class="grid grid-cols-1 md:grid-cols-2 gap-4"
        >
          <div
            class="grid gap-2"
            data-slot="form-item"
          >
            <label
              class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive text-sm font-medium text-foreground"
              data-error="false"
              data-slot="form-label"
              for="_r_b_-form-item"
            >
              First Name
            </label>
            <input
              aria-describedby="_r_b_-form-item-description"
              aria-invalid="false"
              autocomplete="given-name"
              class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 w-full min-w-0 border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive rounded-md"
              data-slot="form-control"
              id="_r_b_-form-item"
              name="firstName"
              type="text"
              value="John"
            />
          </div>
          <div
            class="grid gap-2"
            data-slot="form-item"
          >
            <label
              class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive text-sm font-medium text-foreground"
              data-error="false"
              data-slot="form-label"
              for="_r_c_-form-item"
            >
              Last Name
            </label>
            <input
              aria-describedby="_r_c_-form-item-description"
              aria-invalid="false"
              autocomplete="family-name"
              class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 w-full min-w-0 border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive rounded-md"
              data-slot="form-control"
              id="_r_c_-form-item"
              name="lastName"
              type="text"
              value="Doe"
            />
          </div>
        </div>
        <div
          class="grid gap-2"
          data-slot="form-item"
        >
          <label
            class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive text-sm font-medium text-foreground"
            data-error="false"
            data-slot="form-label"
            for="_r_d_-form-item"
          >
            Phone
          </label>
          <input
            aria-describedby="_r_d_-form-item-description"
            aria-invalid="false"
            autocomplete="tel"
            class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 w-full min-w-0 border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive rounded-md"
            data-slot="form-control"
            id="_r_d_-form-item"
            maxlength="32"
            name="phone"
            placeholder="(555) 123-4567"
            type="tel"
            value="555-1234"
          />
        </div>
        <div
          class="grid gap-2 [&_[data-slot=native-select-wrapper]]:w-full"
          data-slot="form-item"
        >
          <label
            class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive text-sm font-medium text-foreground"
            data-error="false"
            data-slot="form-label"
            for="_r_e_-form-item"
          >
            Country
          </label>
          <div
            class="group/native-select relative w-fit has-[select:disabled]:opacity-50"
            data-slot="native-select-wrapper"
          >
            <select
              aria-describedby="_r_e_-form-item-description"
              aria-invalid="false"
              class="border-input placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 dark:hover:bg-input/50 h-9 w-full min-w-0 appearance-none border bg-transparent px-3 py-2 pr-9 text-sm shadow-xs transition-[color,box-shadow] outline-none disabled:pointer-events-none disabled:cursor-not-allowed data-[size=sm]:h-8 data-[size=sm]:py-1 focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive rounded-md"
              data-size="default"
              data-slot="form-control"
              id="_r_e_-form-item"
              name="countryCode"
            >
              <option
                value="US"
              >
                United States
              </option>
              <option
                value="CA"
              >
                Canada
              </option>
            </select>
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-down text-muted-foreground pointer-events-none absolute top-1/2 right-3.5 size-4 -translate-y-1/2 opacity-50 select-none"
              data-slot="native-select-icon"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m6 9 6 6 6-6"
              />
            </svg>
          </div>
        </div>
        <div
          class="grid gap-2"
          data-slot="form-item"
        >
          <label
            class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive text-sm font-medium text-foreground"
            data-error="false"
            data-slot="form-label"
            for="_r_f_-form-item"
          >
            Address
          </label>
          <input
            aria-describedby="_r_f_-form-item-description"
            aria-invalid="false"
            autocomplete="address-line1"
            class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 w-full min-w-0 border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive rounded-md"
            data-slot="form-control"
            id="_r_f_-form-item"
            name="address1"
            type="text"
            value="123 Main St"
          />
        </div>
        <div
          class="grid gap-2"
          data-slot="form-item"
        >
          <label
            class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive text-sm font-medium text-foreground"
            data-error="false"
            data-slot="form-label"
            for="_r_g_-form-item"
          >
            Address Line 2
          </label>
          <input
            aria-describedby="_r_g_-form-item-description"
            aria-invalid="false"
            autocomplete="address-line2"
            class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 w-full min-w-0 border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive rounded-md"
            data-slot="form-control"
            id="_r_g_-form-item"
            name="address2"
            placeholder="Apartment, suite, etc. (optional)"
            type="text"
            value="Apt 4B"
          />
        </div>
        <div
          class="grid grid-cols-1 md:grid-cols-3 gap-4"
        >
          <div
            class="grid gap-2"
            data-slot="form-item"
          >
            <label
              class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive text-sm font-medium text-foreground"
              data-error="false"
              data-slot="form-label"
              for="_r_h_-form-item"
            >
              Zip Code
            </label>
            <input
              aria-describedby="_r_h_-form-item-description"
              aria-invalid="false"
              autocomplete="postal-code"
              class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 w-full min-w-0 border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive rounded-md"
              data-slot="form-control"
              id="_r_h_-form-item"
              name="postalCode"
              type="text"
              value="94102"
            />
          </div>
          <div
            class="grid gap-2"
            data-slot="form-item"
          >
            <label
              class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive text-sm font-medium text-foreground"
              data-error="false"
              data-slot="form-label"
              for="_r_i_-form-item"
            >
              City
            </label>
            <input
              aria-describedby="_r_i_-form-item-description"
              aria-invalid="false"
              autocomplete="address-level2"
              class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 w-full min-w-0 border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive rounded-md"
              data-slot="form-control"
              id="_r_i_-form-item"
              name="city"
              type="text"
              value="San Francisco"
            />
          </div>
          <div
            class="grid gap-2 [&_[data-slot=native-select-wrapper]]:w-full"
            data-slot="form-item"
          >
            <label
              class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive text-sm font-medium text-foreground"
              data-error="false"
              data-slot="form-label"
              for="_r_j_-form-item"
            >
              State
            </label>
            <div
              class="group/native-select relative w-fit has-[select:disabled]:opacity-50"
              data-slot="native-select-wrapper"
            >
              <select
                aria-describedby="_r_j_-form-item-description"
                aria-invalid="false"
                class="border-input placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 dark:hover:bg-input/50 h-9 w-full min-w-0 appearance-none border bg-transparent px-3 py-2 pr-9 text-sm shadow-xs transition-[color,box-shadow] outline-none disabled:pointer-events-none disabled:cursor-not-allowed data-[size=sm]:h-8 data-[size=sm]:py-1 focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive rounded-md"
                data-size="default"
                data-slot="form-control"
                id="_r_j_-form-item"
                name="stateCode"
              >
                <option
                  value=""
                >
                  Select State
                </option>
                <option
                  value="AL"
                >
                  Alabama
                </option>
                <option
                  value="AK"
                >
                  Alaska
                </option>
                <option
                  value="AZ"
                >
                  Arizona
                </option>
                <option
                  value="AR"
                >
                  Arkansas
                </option>
                <option
                  value="CA"
                >
                  California
                </option>
                <option
                  value="CO"
                >
                  Colorado
                </option>
                <option
                  value="CT"
                >
                  Connecticut
                </option>
                <option
                  value="DE"
                >
                  Delaware
                </option>
                <option
                  value="DC"
                >
                  District Of Columbia
                </option>
                <option
                  value="FL"
                >
                  Florida
                </option>
                <option
                  value="GA"
                >
                  Georgia
                </option>
                <option
                  value="HI"
                >
                  Hawaii
                </option>
                <option
                  value="ID"
                >
                  Idaho
                </option>
                <option
                  value="IL"
                >
                  Illinois
                </option>
                <option
                  value="IN"
                >
                  Indiana
                </option>
                <option
                  value="IA"
                >
                  Iowa
                </option>
                <option
                  value="KS"
                >
                  Kansas
                </option>
                <option
                  value="KY"
                >
                  Kentucky
                </option>
                <option
                  value="LA"
                >
                  Louisiana
                </option>
                <option
                  value="ME"
                >
                  Maine
                </option>
                <option
                  value="MD"
                >
                  Maryland
                </option>
                <option
                  value="MA"
                >
                  Massachusetts
                </option>
                <option
                  value="MI"
                >
                  Michigan
                </option>
                <option
                  value="MN"
                >
                  Minnesota
                </option>
                <option
                  value="MS"
                >
                  Mississippi
                </option>
                <option
                  value="MO"
                >
                  Missouri
                </option>
                <option
                  value="MT"
                >
                  Montana
                </option>
                <option
                  value="NE"
                >
                  Nebraska
                </option>
                <option
                  value="NV"
                >
                  Nevada
                </option>
                <option
                  value="NH"
                >
                  New Hampshire
                </option>
                <option
                  value="NJ"
                >
                  New Jersey
                </option>
                <option
                  value="NM"
                >
                  New Mexico
                </option>
                <option
                  value="NY"
                >
                  New York
                </option>
                <option
                  value="NC"
                >
                  North Carolina
                </option>
                <option
                  value="ND"
                >
                  North Dakota
                </option>
                <option
                  value="OH"
                >
                  Ohio
                </option>
                <option
                  value="OK"
                >
                  Oklahoma
                </option>
                <option
                  value="OR"
                >
                  Oregon
                </option>
                <option
                  value="PA"
                >
                  Pennsylvania
                </option>
                <option
                  value="RI"
                >
                  Rhode Island
                </option>
                <option
                  value="SC"
                >
                  South Carolina
                </option>
                <option
                  value="SD"
                >
                  South Dakota
                </option>
                <option
                  value="TN"
                >
                  Tennessee
                </option>
                <option
                  value="TX"
                >
                  Texas
                </option>
                <option
                  value="UT"
                >
                  Utah
                </option>
                <option
                  value="VT"
                >
                  Vermont
                </option>
                <option
                  value="VA"
                >
                  Virginia
                </option>
                <option
                  value="WA"
                >
                  Washington
                </option>
                <option
                  value="WV"
                >
                  West Virginia
                </option>
                <option
                  value="WI"
                >
                  Wisconsin
                </option>
                <option
                  value="WY"
                >
                  Wyoming
                </option>
              </select>
              <svg
                aria-hidden="true"
                class="lucide lucide-chevron-down text-muted-foreground pointer-events-none absolute top-1/2 right-3.5 size-4 -translate-y-1/2 opacity-50 select-none"
                data-slot="native-select-icon"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m6 9 6 6 6-6"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <hr
        class="border-border mt-4"
      />
      <div
        class="flex gap-3 pt-4 justify-end"
      >
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 py-2 has-[>svg]:px-3 rounded-md px-6"
          data-size="default"
          data-slot="button"
          data-variant="outline"
          type="button"
        >
          Cancel
        </button>
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive h-9 py-2 has-[>svg]:px-3 rounded-md bg-primary hover:bg-primary/90 text-primary-foreground px-6"
          data-size="default"
          data-slot="button"
          data-variant="default"
          type="submit"
        >
          Save
        </button>
      </div>
    </form>
  </div>
</div>
`;
